mle/examples/checks/broken.check
broken.mle:8:36: error: `+` needs float operands, got string
broken.mle:10:37: error: `>` needs float operands, got bool
broken.mle:13:39: error: unary `-` needs a float operand, got bool
broken.mle:16:13: error: `==` compares different types float and string (always false)
broken.mle:20:36: error: record literal for `Position` is missing field `y`
broken.mle:20:44: error: `Position` has no field `z`
broken.mle:23:36: error: `Position` has no field `z`
broken.mle:28:37: error: argument 2 of `shift`: expected float, got string
broken.mle:31:25: error: argument 1 of `Text.concat`: expected string, got float
broken.mle:35:17: error: `Position` takes 0 type argument(s), got 1
